--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,44 @@
+tags
 app/Config/core.php
 app/Config/database.php
-app/tmp/**/*
-app/tmp/**/**/*
 nbproject
 plugins
 vendors
+
+# MAC
 .DS_Store
-tags
+
+# Windows
+Thumbs.db
+
+# Cake TMP Dirs
+/app/tmp/*
+!/app/tmp/
+
+/app/tmp/cache/*
+!/app/tmp/cache/
+!/app/tmp/cache/empty
+
+/app/tmp/cache/models/*
+!/app/tmp/cache/models/
+!/app/tmp/cache/models/empty
+
+/app/tmp/cache/persistent/*
+!/app/tmp/cache/persistent/
+!/app/tmp/cache/persistent/empty
+
+/app/tmp/cache/views/*
+!/app/tmp/cache/views/
+!/app/tmp/cache/views/empty
+
+/app/tmp/logs/*
+!/app/tmp/logs/
+!/app/tmp/logs/empty
+
+/app/tmp/sessions/*
+!/app/tmp/sessions/
+!/app/tmp/sessions/empty
+
+/app/tmp/tests/*
+!/app/tmp/tests/
+!/app/tmp/tests/empty
